# PHAZE-EE

./: .gitignore  README.md  pyproject.toml
data_configs/: .gitkeep  JetClass_full.yaml
network_configs/: .gitkeep  ParticleNet_JetClass.py
phaze_ee/: __init__.py  __main__.py  phaze_ee.py
phaze_ee/src/: __init__.py
phaze_ee/src/models/: __init__.py
phaze_ee/src/models/early_exit/: __init__.py  confidence.py  exit_branches.py  particle_net_ee.py
phaze_ee/src/models/weaver_models/: __init__.py
phaze_ee/src/models/weaver_models/phaze_ee/workspaces/test_workspace/test_project/config/: test_project_config.py
phaze_ee/src/trainers/: __init__.py  exit_loss.py  training.py
phaze_ee/src/utils/: __init__.py  benchmark.py  config.py  ggl.py  plotting.py
phaze_ee/workspaces/: .gitkeep
shell_scripts/: download_jetclass.sh  train_a100.sh
tests/: __init__.py
